--- a/style.css
+++ b/style.css
@@ -3,3 +3,52 @@ body {
   height: 100%;
   margin: 0;
 }
+
+* {
+  text-align: center;
+}
+/* h1 {
+  text-align: center;
+} */
+
+/* #featured-property {
+  text-align: center;
+} */
+
+#featured-property p {
+  text-align: center;
+  max-width: 800px;
+}
+
+#details {
+  /* text-align: center; */
+  display: block;
+  
+  background: rgb(173, 181, 124);
+}
+
+
+nav a {
+  /* text-align: center; */
+  left: 20px;
+  right: 20px;
+  background: rgb(173, 181, 124);
+  
+}
+
+#details div {
+  text-align: center;
+  float: left;
+  width: 25%;
+  background: rgb(163, 211, 163);
+  
+}
+
+img {
+  max-width: 900px;
+  height: auto;
+  vertical-align: middle;
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+}
+
